--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Ryan Stephenson"
   avatar           : "profile.png"
   bio              : "Caltech, Physics, PhD Student"
-  location         : "Pasadena CA"
+  location         : "Pasadena, CA"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=0fkgf-4AAAAJ"
