--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Ryan Stephenson"
   avatar           : "profile.png"
-  bio              : "Caltech, Physics, PhD Student"
+  bio              : "PhD Student @ Caltech, Physics"
   location         : "Pasadena, CA"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
